all visual functionall app

--- a/WBNEWANSWEARS/App.xaml
+++ b/WBNEWANSWEARS/App.xaml
@@ -818,5 +818,36 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+        <!--  CommentsView styles  -->
+
+        <Style x:Key="CommentsListBoxItemContainerCustomStyle" TargetType="ListBoxItem">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ListBoxItem">
+                        <Border
+                            x:Name="border"
+                            Width="210"
+                            Height="50"
+                            Margin="0,0,10,10"
+                            Background="#8179B3"
+                            BorderBrush="Transparent"
+                            BorderThickness="1"
+                            CornerRadius="10"
+                            Cursor="Hand">
+                            <ContentPresenter />
+                        </Border>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="White" />
+                                <Setter TargetName="border" Property="BorderThickness" Value="2" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </Application.Resources>
 </Application>
