--- a/WBNEWANSWEARS/MVVM/View/CommentsView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/CommentsView.xaml
@@ -15,8 +15,8 @@
     <Border CornerRadius="12">
         <Border.Background>
             <LinearGradientBrush>
-                <GradientStop Offset="0.6" Color="#8179B3" />
-                <GradientStop Offset="1.5" Color="#69619B" />
+                <GradientStop Offset="0.6" Color="{StaticResource PrimaryBackgroundColor}" />
+                <GradientStop Offset="1.5" Color="{StaticResource DarkBackgroundColor}" />
             </LinearGradientBrush>
         </Border.Background>
         <Grid>
@@ -43,7 +43,7 @@
                         Grid.Column="0"
                         Margin="0,0,12,0"
                         Padding="12,12,0,12"
-                        Background="#7469B6"
+                        Background="{StaticResource SecondaryBackround}"
                         CornerRadius="12">
                         <ListBox
                             d:ItemsSource="{d:SampleData ItemCount=15}"
@@ -70,7 +70,7 @@
                         Grid.Column="1"
                         Margin="0,0,12,0"
                         Padding="12,12,0,12"
-                        Background="#7469B6"
+                        Background="{StaticResource SecondaryBackround}"
                         CornerRadius="12">
                         <ListBox
                             d:ItemsSource="{d:SampleData ItemCount=15}"
@@ -123,7 +123,7 @@
                         Grid.Column="2"
                         Margin="0,0,0,0"
                         Padding="0,12,0,12"
-                        Background="#7469B6"
+                        Background="{StaticResource SecondaryBackround}"
                         CornerRadius="12"
                         DataContext="{Binding SelectedAnswer}">
                         <StackPanel>
