--- a/WBNEWANSWEARS/MVVM/View/CommentsView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/CommentsView.xaml
@@ -139,7 +139,7 @@
                                     MaxWidth="200"
                                     Style="{DynamicResource TextBoxStyle}"
                                     Tag="пусто..."
-                                    Text="{Binding Title}"
+                                    Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
                                     TextWrapping="NoWrap" />
                             </StackPanel>
                             <StackPanel Margin="0,12,0,0">
@@ -149,7 +149,7 @@
                                     MaxWidth="200"
                                     Style="{DynamicResource TextBoxStyle}"
                                     Tag="Например: 1#3-5"
-                                    Text="{Binding TargetRating}"
+                                    Text="{Binding TargetRating, UpdateSourceTrigger=PropertyChanged}"
                                     TextWrapping="NoWrap" />
                             </StackPanel>
                             <StackPanel Margin="0,12,0,0">
@@ -164,7 +164,7 @@
                                     BorderThickness="2"
                                     Style="{DynamicResource TextBoxStyle}"
                                     Tag="пусто..."
-                                    Text="{Binding Text}"
+                                    Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}"
                                     TextWrapping="Wrap"
                                     VerticalScrollBarVisibility="Auto" />
                             </StackPanel>
