--- a/WBNEWANSWEARS/MVVM/View/SettingsView.xaml
+++ b/WBNEWANSWEARS/MVVM/View/SettingsView.xaml
@@ -112,7 +112,7 @@
                                     MaxWidth="350"
                                     Style="{DynamicResource TextBoxStyle}"
                                     Tag="пусто..."
-                                    Text="{Binding UserName}"
+                                    Text="{Binding UserName, UpdateSourceTrigger=PropertyChanged}"
                                     TextWrapping="NoWrap" />
                             </StackPanel>
                             <StackPanel Margin="0,12,0,0">
@@ -122,7 +122,7 @@
                                     MaxWidth="350"
                                     Style="{DynamicResource TextBoxStyle}"
                                     Tag="пусто..."
-                                    Text="{Binding TokenContent}"
+                                    Text="{Binding TokenContent, UpdateSourceTrigger=PropertyChanged}"
                                     TextWrapping="NoWrap" />
                             </StackPanel>
                             <StackPanel Margin="0,12,0,0">
@@ -132,7 +132,7 @@
                                     MaxWidth="350"
                                     Style="{DynamicResource TextBoxStyle}"
                                     Tag="пусто..."
-                                    Text="{Binding TokenFeedBack}"
+                                    Text="{Binding TokenFeedBack, UpdateSourceTrigger=PropertyChanged}"
                                     TextWrapping="NoWrap" />
                             </StackPanel>
                             <StackPanel Height="197" Margin="0,12,0,0">
